# werust

./: Cargo.toml  Dockerfile  README.md  config.toml
src/: config.rs  config.toml  error.rs  main.rs
