[package]
name = "we-rust"
version = "0.1.0"
authors = ["yancy"]
edition = "2018"

[dependencies]
futures = "0.3.4"
irc-proto = { version = "0.14.0" }
irc = "0.14.1"
async-imap = "0.4.1"
async-std = { version = "1.6.0", default-features = false, features = ["std", "attributes"] }
async-native-tls = { version = "0.3.3" }
lettre = "0.10.0-alpha.2"
regex = "1.4.2"
select = { git = "https://github.com/utkarshkukreti/select.rs.git" }
