[package]
name = "we-rust"
version = "0.1.0"
authors = ["yancy"]
edition = "2018"

[dependencies]
futures = "0.3.4"
irc-proto = { version = "0.14.0" }
irc = "0.14.1"
async-imap = { git = "https://github.com/async-email/async-imap" }
async-std = { version = "1.6.0", default-features = false, features = ["std", "attributes"] }
async-smtp = { version = "0.3.0" }
async-native-tls = { version = "0.3.3" }
lettre = "0.10.0-alpha.2"
regex = "1.4.2"
select = { git = "https://github.com/utkarshkukreti/select.rs.git" }
toml = "0.5"
serde_derive = "1.0"
serde = "1.0"
